--- a/src/app/features/products/edit-variant/edit-variant.component.html
+++ b/src/app/features/products/edit-variant/edit-variant.component.html
@@ -46,6 +46,7 @@
         </div>
         <div class="col-12">
              <ng-container *ngFor="let value of values(); let index = index;">
+              {{values | json}}
         <div class="varianOption shadow-sm bg-second rounded-2  py-1 d-flex flex-column flex-sm-row align-items-center">
           <div class="d-flex align-items-center flex-grow-1">
             <div class="pe-2 align-self-start">
@@ -72,8 +73,8 @@
                 <i class="fa-solid fa-text-width"></i>
               </app-input>
 
-              <div class="colorPickerContainer" *ngIf="showColorPickerContainer">
-              <input
+              <div class="colorPickerContainer" *ngIf="showColorPickerContainer()">
+              <!-- <input
                 [colorPicker]="value"
                 [style.background]="value"
                 [cpToggle]="showColorPicker[index]"
@@ -82,11 +83,12 @@
                 (colorPickerClose)="hideColorPicker(index)"
                 class="circle-picker rounded-2"
                 #colorPick
-              />
+              /> -->
+              <app-color-picking   [ColorPickingData]="{
+                value:value,index:index,values:values} "#colorPick></app-color-picking>
             </div>
             </div>
           </div>
-
           <div class="ps-2 align-self-start pt-3 pt-sm-0" *ngIf="values().length > 0" (click)="removeValue(index)">
             <i class="fa-regular fa-trash-can text-secondary cursor-pointer"></i>
           </div>
