update css mapping

--- a/src/app/shared/components/dropdown/dropdown.component.css
+++ b/src/app/shared/components/dropdown/dropdown.component.css
@@ -1,1 +1,4 @@
-/*# sourceMappingURL=dropdown.component.css.map */
+.circle-picker {
+  width: 90%;
+  height: 15px;
+}/*# sourceMappingURL=dropdown.component.css.map */
