--- a/src/app/components/sideNavComponents/navitem/navitem.component.html
+++ b/src/app/components/sideNavComponents/navitem/navitem.component.html
@@ -17,7 +17,7 @@
   </div>
 </ng-container>
 
-<ng-container *ngIf="['Hold_Orders', 'Return_Order', 'End_Day','Arabic','اللغة الإنجليزية','Add_Variant'].includes(NavitemComponentData.navItemName)">
+<ng-container *ngIf="['Hold_Orders', 'Return_Order', 'End_Day','Arabic','اللغة الإنجليزية'].includes(NavitemComponentData.navItemName)">
   <div class="d-flex align-items-center rounded px-3 mb-2 rounded-4 hover-bg"
        [ngClass]="NavitemComponentData.classes"
        [class.justify-content-center]="NavitemComponentData.isCollapsed"
@@ -27,7 +27,7 @@
   </div>
 </ng-container>
 
-<ng-container *ngIf="!['Shopping', 'Hold_Orders', 'Return_Order','End_Day','Arabic','اللغة الإنجليزية','Add_Variant'].includes(NavitemComponentData.navItemName)">
+<ng-container *ngIf="!['Shopping', 'Hold_Orders', 'Return_Order','End_Day','Arabic','اللغة الإنجليزية'].includes(NavitemComponentData.navItemName)">
   <div class="d-flex align-items-center px-3 mb-2 rounded rounded-4 hover-bg"
        [ngClass]="NavitemComponentData.classes"
        [class.justify-content-center]="NavitemComponentData.isCollapsed"
