update color picking component

--- a/src/app/features/products/components/color-picking/color-picking.component.html
+++ b/src/app/features/products/components/color-picking/color-picking.component.html
@@ -1,4 +1,4 @@
-<div class="position-relative">
+<div>
     <input
                 [colorPicker]="ColorPickingData.value"
                 [style.background]="ColorPickingData.value"
