--- a/src/app/features/products/variants-library/variants-library.component.html
+++ b/src/app/features/products/variants-library/variants-library.component.html
@@ -24,18 +24,18 @@
             <div *ngFor="let variant of VariantOptions(); let index=index;">
             <div class="px-3 py-2 border d-flex justify-content-between align-items-center" [class.border-top-0]="index!=0" [class.rounded-top-3]="index ==0">
                  <div class="d-flex align-items-center  flex-grow-1">
-                  <span class="small pe-3">{{!isRtl() ? variant.name : variant.nameAr  |titlecase}}:</span>
+                  <span class="small pe-3">{{!isRtl() ? variant.nameEn : variant.nameAr  |titlecase}}:</span>
                   <div class="d-flex align-items-center">
-                   <span *ngFor="let value of variant.values; let last = last" [class.mx-1]="!last">
-                        <ng-container *ngIf="variant.name !== 'color'; else coloredVariant">
+                    <span *ngFor="let value of variant.variantDetails; let last = last" [class.mx-1]="!last">
+                        <ng-container *ngIf="variant.nameEn !== 'color'; else coloredVariant">
                            <span class="variantValuebg py-1 fw-light small rounded-3 d-inline-block">
-                            {{value| titlecase}} <span *ngIf="!last">-</span>
+                            {{value.value| titlecase}} <span *ngIf="!last">-</span>
                           </span>
                         </ng-container>
                             <ng-template #coloredVariant>
                               <span class="variantValuebg rounded-3 d-inline-block"
                                     [ngStyle]="{
-                                      'background-color': value,
+                                      'background-color': value.value,
                                       'width': '36px',
                                       'height': '20px',
                                       'display': 'inline-block'
@@ -55,7 +55,8 @@
           </div>
         </div>
 </div>
-<app-edit-variant [variant]="editedVariant" (updated)="updatedVariant()" *ngIf="editedVariant.name"></app-edit-variant>
+ <app-edit-variant [variant]="editedVariant" (updated)="updatedVariant()" *ngIf="editedVariant.nameEn"></app-edit-variant>
+
 </app-layout>
 </div>
 
