--- a/src/app/features/products/variant-library-item/variant-library-item.component.html
+++ b/src/app/features/products/variant-library-item/variant-library-item.component.html
@@ -60,7 +60,8 @@
       </div>
       <div class="col-12" >
 
-      <ng-container *ngFor="let value of values; let index = index;">
+      <!-- <ng-container *ngFor="let value of values; let index = index;"> -->
+            <ng-container *ngFor="let value of values(); let index = index;">
         <div class="varianOption shadow-sm bg-second rounded-2  py-1 d-flex flex-column flex-sm-row align-items-center">
           <div class="d-flex align-items-center flex-grow-1">
             <div class="pe-2">
@@ -145,7 +146,9 @@
             </div>
           </div>
 
-          <div class="ps-2 align-self-end pt-2 pt-sm-0" *ngIf="values.length > 1" (click)="removeValue(value.id)">
+          <!-- <div class="ps-2 align-self-end pt-2 pt-sm-0" *ngIf="values.length > 1" (click)="removeValue(value.id)"> -->
+                      <div class="ps-2 align-self-end pt-2 pt-sm-0" *ngIf="values().length > 1" (click)="removeValue(value.id)">
+
             <i class="fa-regular fa-trash-can text-secondary cursor-pointer"></i>
           </div>
         </div>
