update edit variant to use variant library component

--- a/src/app/features/products/edit-variant/edit-variant.component.html
+++ b/src/app/features/products/edit-variant/edit-variant.component.html
@@ -1,98 +1,5 @@
 <div class="border rounded-3 p-3">
-    <div class="text-danger fs-verySmall">{{errorMessage}}</div>
-      <div class="row gy-2">
-        <div class="col-6">
-             <app-input
-                [InputComponentData]="{
-                type: 'text',
-                id: '',
-                label: '',
-                spanLabel: '',
-                placeholder: 'Variant Name',
-                vertCLass: 'col-12',
-                readonly: false,
-                hideLabel: true,
-                inputGroup: false,
-                clickMessage: '',
-                errorMessage: '',
-                enableFocusBlurTracking: false,
-              }"
-                #name
-              >
-                <i class="fa-solid fa-text-width"></i>
-              </app-input>
-        </div>
-
-            <div class="col-6">
-             <app-input
-                [InputComponentData]="{
-                type: 'text',
-                id: '',
-                label: '',
-                spanLabel: '',
-                placeholder: 'Variant Arabic Name',
-                vertCLass: 'col-12',
-                readonly: false,
-                hideLabel: true,
-                inputGroup: false,
-                clickMessage: '',
-                errorMessage: '',
-                enableFocusBlurTracking: false,
-              }"
-                #nameAr
-              >
-                <i class="fa-solid fa-text-width"></i>
-              </app-input>
-        </div>
-        <div class="col-12">
-             <ng-container *ngFor="let value of values(); let index = index;">
-        <div class="varianOption shadow-sm bg-second rounded-2  py-1 d-flex flex-column flex-sm-row align-items-center">
-          <div class="d-flex align-items-center flex-grow-1">
-            <div class="pe-2 align-self-start">
-                  <i class="fa-solid fa-location-arrow text-semi-dark"></i>
-            </div>
-            <div class="flex-grow-1 position-relative">
-              <app-input
-                [InputComponentData]="{
-                type: 'text',
-                id: '',
-                label: '',
-                spanLabel: '',
-                placeholder: 'Variant Value',
-                vertCLass: 'col-12',
-                readonly: false,
-                hideLabel: true,
-                inputGroup: false,
-                clickMessage: '',
-                errorMessage: '',
-                enableFocusBlurTracking: false,
-              }"
-                #variantValue
-              >
-                <i class="fa-solid fa-text-width"></i>
-              </app-input>
-              <div class="colorPickerContainer" *ngIf="showColorPickerContainer()">
-              <app-color-picking   [ColorPickingData]="{
-                value:value,index:index,values:values} "#colorPick></app-color-picking>
-            </div>
-            </div>
-          </div>
-          <div class="ps-2 align-self-start pt-3 pt-sm-0" *ngIf="values().length > 0" (click)="removeValue(index)">
-            <i class="fa-regular fa-trash-can text-secondary cursor-pointer"></i>
-          </div>
-        </div>
-      </ng-container>
-        </div>
-      </div>
-      <div class="p-2 mt-2 text-center bg-secondary  text-white fs-verySmall  rounded-2 d-flex align-items-center justify-content-center" *ngIf="!insertVariantNewValue"    (click)="showNewValueInput()">
-        <i class="fa-solid fa-plus fa-sm pe-2"></i>
-         <span> {{'Add Another Value' | translate}}</span>
-       </div>
-        <div class="p-2 mt-2 text-center bg-secondary  text-white fs-verySmall  rounded-2 d-flex align-items-center justify-content-center" *ngIf="insertVariantNewValue" (click)="addNewValue()">
-        <i class="fa-solid fa-plus fa-sm pe-2"></i>
-         <span> {{'Add' | translate}}</span>
-       </div>
-
+       <app-variant-library-item [action]="action" [variant]="variant" (updated)="updatedVariant()"></app-variant-library-item>
         <div class="p-2 mt-2 text-center bg-semi-dark  text-white fs-verySmall  rounded-2 d-flex align-items-center justify-content-center" (click)="updateVariant()">
          <span> {{'Update Variant' | translate}}</span>
        </div>
